kubernetes/solutions/05_deployment_with_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    tier: application
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      # list of volumes that can be mounted by containers belonging to the pod
      volumes:
        # define a unique name for the volume. It is valid within the specification of the pod only.
      - name: content-storage
        # a reference to a PersistentVolumeClaim in the same namespace
        persistentVolumeClaim:
          claimName: nginx-pvc
#          readOnly: true
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        # make use of volumes specified on pod level to mount into the container's filesystem
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          # use the name given to the volume in the 'volumes' section above to reference it
          name: content-storage
#          readOnly: true
