kubernetes/solutions/06_deployment_https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-https-deployment
  labels:
    tier: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-https
  template:
    metadata:
      labels:
        app: nginx-https
    spec:
       # list of volumes that can be mounted by containers belonging to the pod
      volumes:
        # make the persistentVolumeClaim with the index.html page available
      - name: content-storage
        persistentVolumeClaim:
          claimName: nginx-pvc
          readOnly: true
        # make the secret with the TLS certificates available
      - name: tls-secret
        secret:
          secretName: nginx-sec
        # make the configMap with the server configuration available
      - name: nginxconf
        configMap:
          name: nginxconf
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        livenessProbe:
          httpGet:
            # point the livenessProbe to the URI specified in the server configuration (configMap)
            path: /healthz
            # reference the port by its name
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        # define how/where to container can acces the available volumes
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: content-storage
          readOnly: true
        - mountPath: /etc/nginx/ssl
          name: tls-secret
          readOnly: true
        - mountPath: /etc/nginx/conf.d
          name: nginxconf
