kubernetes/solutions/06_service_basic_auth.yaml
# declaration of a service
# services belong to api group 'core' in version 'v1'
# 'core' does not need to be specified explicitly
apiVersion: v1
kind: Service
# metadata is an object/map and requires at least the key 'name'. 
# The value has to be unique for this type of resource within the namespace
metadata:
  name: nginx-basic-auth
  # labels is another map and contains one to many key:value pairs
  labels:
    # the service itself will be labeled with a key 'tier' that has a value 'networking'
    tier: networking
# defines the behavior of a service
spec:
  # a service can handle one or many ports. They are defined in a list
  ports:
    # 'port' specifies on which port the service will accept traffic
    # as 'targetPort' is not specified, the value of 'port' will be used
  - port: 80
    protocol: TCP
    # it is good practice to assign a name to each port
    # also it removes the requirement for a target port
    name: http
  selector:
    app: auth-nginx
  # specify the service type: LoadBalancer, NodePort, ClusterIP
  # a service of type NodePort implicitly is also of type ClusterIP
  # a service of type LoadBalancer implicitly is also of type NodePort and ClusterIP
  type: LoadBalancer
